<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:id="@+id/group_folder"
        android:visible="false">
        <item
            android:id="@+id/folder"
            android:icon="@drawable/ic_menu_archive"
            android:orderInCategory="1"
            android:title="@string/save_folder"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group_settings"
        android:visible="false">
        <item
            android:id="@+id/settings"
            android:icon="@drawable/ic_menu_preferences"
            android:orderInCategory="2"
            android:title="@string/settings"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_help"
        android:visible="false">
        <item
            android:id="@+id/help"
            android:icon="@drawable/ic_menu_help"
            android:orderInCategory="3"
            android:title="@string/help"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_share"
        android:visible="false">
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_menu_share"
            android:orderInCategory="4"
            android:title="@string/share"
            app:showAsAction="ifRoom" />
    </group>

    <group
        android:id="@+id/group_evaluate"
        android:visible="false">
        <item
            android:id="@+id/evaluate"
            android:icon="@drawable/ic_menu_star"
            android:orderInCategory="5"
            android:title="@string/evaluate"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_about"
        android:visible="false">
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_menu_info_details"
            android:orderInCategory="6"
            android:title="@string/about"
            app:showAsAction="never" />
    </group>

    <group
        android:id="@+id/group_exit"
        android:visible="false">
        <item
            android:id="@+id/exit"
            android:icon="@drawable/ic_menu_close_clear_cancel"
            android:orderInCategory="7"
            android:title="@string/exit"
            app:showAsAction="never" />
    </group>
</menu>